# oops

./: .dockerignore  API.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
data/: AAPL.csv  MSFT.csv  stock_data.csv
include/: FileHandler.h  PredictionAlgorithm.h  Stock.h  StockPredictor.h
src/: FileHandler.cpp  PredictionAlgorithm.cpp  Stock.cpp  StockPredictor.cpp  httpserver.cpp  main.cpp
